<resources>
    <string name="app_name" translatable="false">IGLOB Driver</string>
    <string name="app_name_cap" translatable="false">IGLOB Driver</string>
    <string name="googlekey" translatable="false">AIzaSyAvu8EE4FtJOzQHlfPeGhybbYRG3P7I9Es</string>
    <string name="googlekey_other" translatable="false">AIzaSyDoTgCPXDGQKNYIWQ-LwawNDmw57YrThfw</string>
    <string name="FACEBOOK_APP_ID" translatable="false">1941193059506768</string>
    <string name="facebook_app_id" translatable="false">1941193059506768</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">51c17c549405876879cb48033cfe0c03</string>
    <string name="allowpermission">Allow Permission</string>
    <string name="nessper">This Permission is necessary to use IGLOB Driver</string>
    <string name="allow">Allow</string>
    <string name="closeapp">Close App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="wevarify">We will verify your mobile number</string>
    <string name="wantcont">Do you want to continue?</string>
    <string name="login_sm">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="logface">LOGIN WITH FACEBOOK</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pickuplocation">Pick Up Location</string>
    <string name="droplocation">Drop off Location</string>
    <string name="sign_sm">Signup</string>
    <string name="bookletter">BOOK LATER</string>
    <string name="booknow">BOOK NOW</string>
    <string name="myprofile">Profile</string>
    <string name="mywallet">My Wallet</string>
    <string name="money">Money</string>
    <string name="cashless"><![CDATA[Cashless, Hassle-free rides & more]]></string>
    <string name="currentbal">Your current balance</string>
    <string name="addhitechmoney">Add Amount</string>
    <string name="entermoney">Enter amount between $10 - $100</string>
    <string name="billpaywith">Bill pay with</string>
    <string name="ridehistory">History</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="setdrop">Enter drop off location</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="pleaseenteremailid">Enter your email id</string>
    <string name="email">email id</string>
    <string name="selectvehicleimg">Please select your vehicle image</string>
    <string name="enteryourvehiclename">Enter your vehicle name</string>
    <string name="selectvehiclecategory">Select your vehicle category</string>
    <string name="selectvehiclesize">Select your vehicle size</string>
    <string name="enteryourvehicleregnumber">Enter your VIN number</string>
    <string name="selectvehiclemodel">Select your vehicle model year</string>
    <string name="enteryourvehiclecol">Enter your vehicle color name</string>
    <string name="submit">Submit</string>
    <string name="createaccoub">Create an account</string>
    <string name="driverinfo">Driver Information</string>
    <string name="username">Username</string>
    <string name="driverlicens">Drivers License</string>
    <string name="carmodel">Car Make and Model</string>
    <string name="yearmanu">Year of Manufacture</string>
    <string name="selcarcol">Select Car Color</string>
    <string name="carregis">License Plate Number</string>
    <string name="insurance">Insurance</string>
    <string name="register">REGISTER</string>
    <string name="driverside">Drivers Side</string>
    <string name="goonline">Go Online</string>
    <string name="change">Change</string>
    <string name="addcar">Add Car</string>
    <string name="pleasewait">please wait...</string>
    <string name="gooffline">Go offline</string>
    <string name="selectcar">Select your car</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="pickuppesanger">Pickup Passenger</string>
    <string name="arrived">ARRIVED</string>
    <string name="viewpessangerdetail">View Passenger Details</string>
    <string name="canceltripmenu">Cancel Trip</string>
    <string name="selectlang">Select Languages</string>
    <string name="done">Done</string>
    <string name="invalidcredential">Invalid Credentials</string>
    <string name="entermobile">Enter Your Mobile Number</string>
    <string name="enterpass">Enter Password</string>
    <string name="selectcarmodel">Select Car Make and Model</string>
    <string name="selmanyyear">Maufacture Year</string>
    <string name="selectcarcol">Select Car Color</string>
    <string name="plsentpass">Please Enter Password</string>
    <string name="plsmobilestr">Please enter mobile number</string>
    <string name="plsentusername">Please Enter Username</string>
    <string name="plsselyear">Please select manufacture year</string>
    <string name="entercarmodel">Please enter car model name</string>
    <string name="plsenterregi">Please enter licence plate number</string>
    <string name="pleasuplodains">Please upload insurance card image</string>
    <string name="plsupldri">Please upload drivers license image</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="pesdetail">Passenger details</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="carimage">Select car image</string>
    <string name="carispect">Registration</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="canceluser">This ride has been canceled by the user</string>
    <string name="areusure">Are you sure?</string>
    <string name="tocancel">Cancel this request</string>
    <string name="slideendtrip">End Trip</string>
    <string name="yes">Yes</string>
    <string name="toendtrip">End the trip</string>
    <string name="tostarttrip">Start the trip</string>
    <string name="warning">Warning!!</string>
    <string name="notonpoint">You are not at the drop off point. Please confirm to finish the ride</string>
    <string name="slidebegintrip">Start Trip</string>
    <string name="tripsummary">Trip Summary</string>
    <string name="paymenttype">Payment Type: Cash</string>
    <string name="promocodedis">Promo code</string>
    <string name="pleasecollect">Please collect money from rider</string>
    <string name="detail">Detail</string>
    <string name="entercomment">Enter Comment</string>
    <string name="usernotpaymentyet">User has not paid yet</string>
    <string name="payment">Payment</string>
    <string name="recivecash">You have received the payment by cash</string>
    <string name="givebywallet">User paid by wallet.</string>
    <string name="givebycreditcard">User paid by credit card</string>
    <string name="toarrived">Arrived at pickup point.</string>
    <string name="lastearning">Last Trip</string>
    <string name="netearning">Net Earnings</string>
    <string name="todayearning">Today\'s Earnings</string>
    <string name="estimatednet">Estimated Net</string>
    <string name="tips">Tips</string>
    <string name="todaytips">Today Tips</string>
    <string name="trip">Trip</string>
    <string name="all">All</string>
    <string name="yourtranjection">Your Transactions</string>
    <string name="withdra">Withdraw Money</string>
    <string name="history">History</string>
    <string name="driver">Driver</string>
    <string name="help">Help</string>
    <string name="personal">Personal</string>
    <string name="cashout">Cash Out</string>
    <string name="redeem">Redeem</string>
    <string name="bankname">Bank Routing Number</string>
    <string name="accountno">Account Number</string>
    <string name="ammount">Amount</string>
    <string name="fullname">Full Name</string>
    <string name="postcode">Zip Code</string>
    <string name="transferout">Transfer Out</string>
    <string name="ridedetail">Ride Detail</string>
    <string name="bookingno">Booking Id</string>
    <string name="notactive">Waiting for your account to be verified.</string>
    <string name="favuser">Favorite users</string>
    <string name="enteramount">Please enter amount</string>
    <string name="performance">Performance</string>
    <string name="trasaction">Transactions</string>
    <string name="alreadylog">You are logged in from a different device. Would you like to log out of the other device?</string>
    <string name="appupdateneed">New version available. Please update before continuing</string>
    <string name="remindlater">Remind me later</string>
    <string name="updatewallet">Your wallet amount is to low for cash rides, please maintain a balance of 20$ for getting cash rides.</string>
    <string name="later">Later</string>
    <string name="dropadd">New drop off point has been added by the passenger</string>
    <string name="servererror">Server Error, please try again later</string>
    <string name="checkpassreslink">Please check your email to reset the password</string>
    <string name="emailnotext">This email id does not exist</string>
    <string name="discountapp">Discount applied:</string>
    <string name="colectmoneyfromrider">Please collect money from rider</string>
    <string name="amountaddwallet">Amount will be added to your wallet</string>
    <string name="cardrideamountaddwallet">Amount will be added to your wallet</string>
    <string name="selloc">Please select location</string>
    <string name="selservicetype">Please select service type</string>
    <string name="inroute">Enroute</string>
    <string name="picpassenger">Pickup Passenger</string>
    <string name="ontheway">On the way</string>
    <string name="startnavigation">Start Navigation</string>
    <string name="googlemap">Google Map</string>
    <string name="waze">Waze</string>
    <string name="addinwalletforcardride">Add amount in your wallet for card payment type ride.</string>
    <string name="paidforride">the amount you paid for your card type ride</string>
    <string name="addedtoyourwallet">Add amount in your wallet.</string>
    <string name="addinwalletforwallettyperide">Amount added for wallet type ride.</string>
    <string name="amountdeductforwalletride">Amount has been deducted for wallet ride</string>
    <string name="deductfromwalletforcashride">Amount has been deducted for cash ride.</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="todaytotalride"> Todays total rides:</string>
    <string name="todaytotalearning">Today earnings:</string>
    <string name="todayacceptride">Todays accepted rides :</string>
    <string name="expresspay">Express Pay</string>
    <string name="expresspaycharge">$0.50 will be charged when you select express payment.</string>
    <string name="countrycodestr">Country Code (Ex. US)</string>
    <string name="accountholdername">Account Holder Name</string>
    <string name="accountholderaddress">Account Holder Address</string>
    <string name="accountnumber">Account Number</string>
    <string name="branchname">Branch Name</string>
    <string name="branchaddress">Branch Address</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="routingnumber">Routing Number</string>
    <string name="bankaccount">Bank Account</string>
    <string name="add_payout">Add Payout</string>
    <string name="select_date">Select date</string>
    <string name="title">title</string>
    <string name="amount">Amount</string>
    <string name="description">description</string>
</resources>