<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/ic_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_payout"
                android:textColor="@color/white"
                android:textSize="18dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_grey_rec"
        android:hint="@string/select_date"
        android:maxLength="35"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgrey"
        android:textSize="@dimen/medium" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_grey_rec"
        android:hint="@string/title"
        android:imeOptions="actionNext"
        android:inputType="text|textCapSentences"
        android:maxLength="35"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgrey"
        android:textSize="@dimen/medium" />
    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_grey_rec"
        android:hint="@string/amount"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="35"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgrey"
        android:textSize="@dimen/medium" />
    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_grey_rec"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:gravity="left"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgrey"
        android:textSize="@dimen/medium" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/toobarcolor"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/add_payout"
            android:textColor="@color/white"
            android:textSize="@dimen/large"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>
</LinearLayout>
</layout>